task-15-verify-images-enforce/signed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed-pod
spec:
  containers:
    - name: test
      image: ghcr.io/kyverno/test-verify-image:signed
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 200m
          memory: 256Mi
